Fix task manager's default sizing.

Set default width based on contents rather than hardcoding a value (which happened to be too small once we adjusted outer padding for the dialog).

BUG=614317

Review-Url: https://codereview.chromium.org/2344703002
Cr-Commit-Position: refs/heads/master@{#422893}

Former-commit-id: 6678470d3169979d811eec56e7cdea668ab751c1