chrome/browser/ui/views/task_manager_view.h
@@ -115,9 +115,6 @@ class TaskManagerView : public TableViewDelegate,
   std::unique_ptr<ui::SimpleMenuModel> menu_model_;
   std::unique_ptr<views::MenuRunner> menu_runner_;
 
-  // We need to own the text of the menu, the Windows API does not copy it.
-  base::string16 always_on_top_menu_text_;
-
   views::TableView* tab_table_;
   views::View* tab_table_parent_;
 
